# category_clasification_naive_baiyes

./: README.md  dataset_kategori.csv  pyproject.toml  training_data.py
model/metadata/: .part-00000-36078b61-b382-4722-86ab-5734587702ad-c000.txt.crc  part-00000-36078b61-b382-4722-86ab-5734587702ad-c000.txt
model/stages/0_Tokenizer_719388d9d287/metadata/: .part-00000-ee2f5927-40df-451c-9967-dbf1065f446b-c000.txt.crc  part-00000-ee2f5927-40df-451c-9967-dbf1065f446b-c000.txt
model/stages/1_StopWordsRemover_52e5ce1cdeb7/metadata/: .part-00000-e8cdb54d-798b-4463-b568-7b5a6e47ba85-c000.txt.crc  part-00000-e8cdb54d-798b-4463-b568-7b5a6e47ba85-c000.txt
model/stages/2_HashingTF_c1b1f42b0a18/metadata/: .part-00000-4226b286-768b-4c8e-a94a-02d1b22ab8bf-c000.txt.crc  part-00000-4226b286-768b-4c8e-a94a-02d1b22ab8bf-c000.txt
model/stages/3_IDF_a7e23499a870/data/: .part-00000-a0fbb2c6-43cc-4593-8429-02ced48f47f9-c000.snappy.parquet.crc  part-00000-a0fbb2c6-43cc-4593-8429-02ced48f47f9-c000.snappy.parquet
model/stages/3_IDF_a7e23499a870/metadata/: .part-00000-8b93033f-fada-4d57-9e6b-13e71bf999ef-c000.txt.crc  part-00000-8b93033f-fada-4d57-9e6b-13e71bf999ef-c000.txt
model/stages/4_NaiveBayes_de3ab673b0d6/data/: .part-00000-c1dd6650-dcca-468a-8519-f705d70cc038-c000.snappy.parquet.crc  part-00000-c1dd6650-dcca-468a-8519-f705d70cc038-c000.snappy.parquet
model/stages/4_NaiveBayes_de3ab673b0d6/metadata/: .part-00000-693c0dcd-c3ce-48b4-be57-bc7f09a00250-c000.txt.crc  part-00000-693c0dcd-c3ce-48b4-be57-bc7f09a00250-c000.txt
(+2 files in other folders)
